# Projeto-Compiladores

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: cmake-multi-platform.yml
etc/: teste.txt  testeEOF.txt  testeID.txt  testeUE.txt
headers/: Table.h  Tokens.h
src/: ArvoreConcreta.cpp  ConcreteTree.cpp  Lex.cpp  Lexer.cpp  SymbolTable.cpp  SyntacticAnalyzer.cpp  Table.cpp  Token.cpp  debug.cpp  main.cpp  teste.txt
src/exception/: LexerException.cpp  SyntaticException.cpp
src/include/: ArvoreConcreta.hpp  ConcreteTree.hpp  Lex.hpp  Lexer.hpp  SymbolTable.hpp  SyntacticAnalyzer.hpp  Table.hpp  Token.hpp  debug.hpp
src/include/exception/: LexerException.hpp  SyntaticException.hpp
